--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mini-css-extract-plugin": "^1.3.3",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "terser-webpack-plugin": "^5.0.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1",
